--- a/RefresherTest/App.xaml
+++ b/RefresherTest/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:RefresherTest"
-             StartupUri="MainWindow.xaml">
+             Startup="Application_Start">
     <Application.Resources>
          
     </Application.Resources>
