--- a/RefresherTest/MainWindow.xaml
+++ b/RefresherTest/MainWindow.xaml
@@ -6,7 +6,9 @@
         xmlns:local="clr-namespace:RefresherTest"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+    <Grid Name="pnlMainGrid"  Background="LightBlue">
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="72">
+            Hello, Me!
+        </TextBlock>
     </Grid>
 </Window>
